# SolanaTools

./: Cargo.toml
grpcStreamTemplate/: .env  config.ts  main.ts
grpcStreamTemplate_rust/: Config.toml
grpcStreamTemplate_rust/src/: config.rs
grpcStreamTemplate_ts/: config.ts
src/: main.rs
