[package]
name = "rust_grpc_template"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "signal"] }
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.8"
bs58 = "0.5.0"
tonic = "0.12.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
once_cell = "1.19"